--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "chatroom",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
-    "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.12",
+    "vue-turbolinks": "^2.2.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
